# litigia

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py
backend/app/models/: schemas.py
backend/app/services/: analysis.py  analysis_agents.py  analysis_display.py  analysis_filters.py  analysis_helpers.py  analysis_pipeline.py  analysis_prompts.py  analysis_search.py  document_generator.py  embeddings.py  fulltext_store.py  keyword_search.py  rag.py  reranker.py  tiers.py  vector_store.py
backend/scripts/: benchmark.py  build_fts_index.py  build_fulltext_store.py  download_datasets.py  ingest_embeddings.py  sync.sh  sync_datasets.py
backend/scripts/normalizers/: jurisgpt.py  saij.py  schema.py
backend/scripts/scrapers/: csjn.py  deploy_parallel.py  monitor.py  monitor.sh  pjn_tribunales.py
docs/: BENCHMARK.md  BENCHMARK_COSTOS.md  NOISE_LEGAL_ARGENTINA.md  QUE_SIGUE_POST_CLAUDE_MODELOS.md  ROADMAP_AI.md
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analisis/: page.tsx
frontend/app/escrito/: page.tsx
frontend/app/oficio/: page.tsx
frontend/components/: agent-swarm.tsx  app-shell.tsx  auth-page.tsx  forms.tsx  nav-links.tsx  results.tsx  tool-page.tsx  tool-selector.tsx  ui.tsx  user-menu.tsx
frontend/lib/: api.ts  auth.tsx  saved-items.ts  tokens.ts  usage.ts  use-analysis-stream.ts
supabase/: migration.sql  migration_usage.sql
(+5 files in other folders)
